--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -477,43 +477,43 @@
         </section>
         <section class="numbers container container--wide">
             <h2 class="numbers__heading title" id="numbers">
-                Quotalogic in&nbsp;numbers
+                Quotcat в цифрах
             </h2>
             <div class="numbers__summary">
                 <div class="numbers__tile">
                     <b class="numbers__stat">
-                        <span class="accent">1</span> minute
+                        <span class="accent">1</span> минута
                     </b>
                     <div class="numbers__description">
-                        Get your first payment in just one minute, without needing to deploy or set up a CMS/PIM
+                        Совершите первую продажу уже через минуту, без необходимости настройки своей собственной системы управления сайтом
                     </div>
                 </div>
                 <div class="numbers__tile">
                     <b class="numbers__stat">
-                        <span class="accent">90%</span> less<br> resources
+                        на <span class="accent">90%</span> меньше<br> затрат
                     </b>
                     <div class="numbers__description">
-                        Spend less time on content management while keeping your company's product data and catalogs <span class="nobr">up-to-date</span>
+                        Тратьте меньше времени на управление контентом
                     </div>
                 </div>
                 <div class="numbers__tile">
                     <b class="numbers__stat">
-                        up to <span class="accent">+40%</span><br> increase in sales
+                        до <span class="accent">+40%</span> роста продаж
                     </b>
                     <div class="numbers__description">
-                        Quotalogic eliminates data bottlenecks in the quotation process when working with multiple vendors.
+                        Революционно быстрая подготовка коммерческих предложений даже при работе с несколькими поставщиками
                     </div>
                 </div>
             </div>
             <div class="numbers__data">
                 <h3 class="numbers__sub-heading title">
-                    More cool <br class="smartphone-only"> stats
+                    Больше фактов:
                 </h3>
                 <div class="numbers__list">
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">49%</span>
-                            <span class="numbers__unit">increase in proposal volume</span>
+                            <span class="numbers__unit">рост объема предложений</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 71.1363%;"></div>
@@ -521,7 +521,7 @@
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">27%</span>
-                            <span class="numbers__unit">shorter sales cycles</span>
+                            <span class="numbers__unit">сокращение цикла продаж</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 35.4545%;"></div>
@@ -529,7 +529,7 @@
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">15%</span>
-                            <span class="numbers__unit">margin growth</span>
+                            <span class="numbers__unit">рост средней маржи</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 54.5455%;"></div>
@@ -537,7 +537,7 @@
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">19%</span>
-                            <span class="numbers__unit">higher lead conversion rates</span>
+                            <span class="numbers__unit">повышение конверсии</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 59.0909%;"></div>
@@ -545,7 +545,7 @@
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">20%</span>
-                            <span class="numbers__unit">increase in product<br class="desktop-only"> knowledge demonstration</span>
+                            <span class="numbers__unit">более качественная<br class="desktop-only"> презентация товаров</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 64.5454%;"></div>
@@ -553,7 +553,7 @@
                     <div class="numbers__item">
                         <div class="numbers__value">
                             <span class="numbers__percent">78%</span>
-                            <span class="numbers__unit">faster response times<br class="desktop-only"> to customers</span>
+                            <span class="numbers__unit">ускорение ответов<br class="desktop-only"> клиенту</span>
                         </div>
                         <div class="numbers__progress numbers__progress--alternate" role="presentation" aria-hidden="true" style="width: 47.5%;"></div>
                         <div class="numbers__progress numbers__progress--accent" role="presentation" aria-hidden="true" style="width: 85.45454%;"></div>
