--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -563,20 +563,19 @@
         </section>
         <section class="basics container container--wide">
             <h2 class="basics__heading title" id="basics">
-                Our basics
+                Наши основы
             </h2>
             <div class="basics__description">
-                Quotalogic is redefining the way we approach products. We believe that every physical product should have a single virtual counterpart, accessible to the entire dealer network, rather than millions of data copies for each seller.
+                Quotcat меняет подход к управлению товарами. Мы верим, что каждому физическому продукту должен соответствовать единый виртуальный объект, доступный всей дилерской сети, вместо миллионов копий данных для каждого продавца
             </div>
             <div class="basics__lists">
                 <div class="basics__tile basics__tile--meaning">
                     <h3 class="basics__sub-heading">
-                        Reimagining Proposals with Quotalogic
+                        Переосмысляем прайсы и каталоги
                     </h3>
                     <div class="basics__text wysiwyg wysiwyg--dense">
-                        <p>Quotalogic is revolutionizing the way we use proposals. They serve not just as vehicles for product information, but as the medium to share the products themselves.</p>
-                        <p>Each of our Proposals is a custom-designed web page, equipped with specific tools tailored to the template and use case. They act as representative catalogs, promos, or price lists. Dealers can connect the offered products to their workspace with just one click and start using them. They can combine products from multiple suppliers, share them with their network, or create quotes for customers.</p>
-                        <p>Moreover, Quotalogic Proposals can function as a company website, a public price list, or as a quick, customizable quote for a customer. They come with adaptive product descriptions and sales tools, such as chat, online payment, invoicing, and more.</p>
+                        <p>Quotcat кардинально меняет подход к использованию каталогов и предложений. Они становятся не просто носителями информации о товарах, а полноценным способом делиться самими продуктами. Каждое такой сет из товаров — это специально созданная веб-страница, оснащенная инструментами, адаптированными под шаблон и конкретный случай использования. Эти предложения могут выступать в роли каталогов, акций или прайс-листов. Дилеры могут подключить предложенные товары к своему рабочему пространству одним кликом и начинать ими пользоваться. Они могут комбинировать продукты от разных поставщиков, делиться ими в своей сети или создавать предложения для клиентов.</p>
+                        <p>Кроме того, предложения Quotcat могут использоваться как сайт компании, публичный прайс-лист или быстрое, настраиваемое предложение для клиента.</p>
                     </div>
                     <div class="basics__preview">
                         <picture>
@@ -593,10 +592,10 @@
                 </div>
                 <div class="basics__tile basics__tile--integrations">
                     <h3 class="basics__sub-heading">
-                        Integrations In and Out
+                        Интеграции
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>Quotalogic handles data synchronization and integrations. You can create a catalog that pulls data from any external source, whether it's via a feed, API, or a file. Simultaneously, you can export any data collected in Quotalogic to your website, CMS, or marketplace.</p>
+                        <p>Quotcat обеспечивает синхронизацию данных и интеграции. Вы можете создать каталог, который получает данные из любого внешнего источника — через фид, API или файл. Одновременно вы можете экспортировать любые данные, собранные в Quotcat, на свой сайт, в CMS или маркетплейс.</p>
                     </div>
                     <div class="basics__preview">
                         <picture>
@@ -613,20 +612,22 @@
                 </div>
                 <div class="basics__tile basics__tile--data-model">
                     <h3 class="basics__sub-heading">
-                        Dynamically Constructed<br class="desktop-only"> Product Data Model
+                        Динамическая модель данных
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>Product characteristics can be determined by dependencies (using formulas) on other values or external factors. It's as easy as using a spreadsheet, but specifically tailored for sales tasks.</p>
+                        <p>Характеристики продукта могут задаваться через формулы и рассчитываться от других значений (например, дилерская цена  может задаваться через скидку от розничной цены). Это так же просто, как работа в электронных таблицах, адаптированных для задач отдела продаж.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--omnichanelling">
                     <h3 class="basics__sub-heading">
-                        Evolutionary Omnichanelling
+                        Эволюционная омниканальность
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>Distributors can customize and share different product properties with various dealer groups.</p>
-                        <p>Dealers, in turn, can override and extend these characteristics before resharing them with partners.</p>
-                        <p>This way, the core of the product remains consistent, while each seller in the chain sees a unique version of the product.</p>
+                        <p>
+                            Поставщики могут настраивать и делиться отличающимися характеристиками товаров персонально с разными группами дистрибьюторов.<br>
+                            Дистрибьюторы, в свою очередь, могут изменять и дополнять эти свойства, прежде чем делиться ими со своими партнерами.<br>
+                            Ядро продукта остается неизменным, но каждый продавец в цепочке видит уникальную версию товара, адаптированную персонально под него.
+                        </p>
                     </div>
                     <div class="basics__preview">
                         <video class="basics__video" autoplay muted playsinline loop>
@@ -637,32 +638,32 @@
                 </div>
                 <div class="basics__tile basics__tile--dealer-network">
                     <h3 class="basics__sub-heading">
-                        A Single Virtual Product for the Entire Dealer Network
+                        Единый виртуальный продукт для всей дилерской сети
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>With every dealer in the network using a single, shared foundational product object, any changes to product details are instantly reflected across the network.</p>
-                        <p>Thanks to dynamic formulas that automatically calculate extended product characteristics, your product information always remains up-to-date, requiring no manual management.</p>
+                        <p>Каждый дилер в сети опирается на продукт из центрального каталога, адаптируя и настраивая данные под свои задачи.</p>
+                        <p>Любые изменения в характеристиках товара мгновенно отображаются по всей сети.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--user-data">
                     <h3 class="basics__sub-heading">
-                        Secured User Data
+                        Защищенные данные
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>If required, sellers can alter or disconnect the dependency of product data on the supplier. Any updates or changes will continue to be forwarded to the seller, who can easily choose to accept, reject or merge them with their current data.</p>
+                        <p>Дилер может изменить или отключить зависимость данных о продукте от поставщика. Все обновления и изменения продолжат поступать продавцу, и могут быть обработаны в ручном режиме.</p>
                     </div>
                 </div>
                 <div class="basics__tile basics__tile--quoting">
                     <h3 class="basics__sub-heading">
-                        Smart quoting
+                        Мгновенное составление подборок
                     </h3>
                     <div class="basics__text wysiwyg">
-                        <p>While compiling a quote, the system recommends specific products and pricing, drawing on supplier guidance, machine learning, and an analysis of similar product combinations used within the dealer network.</p>
+                        <p>Интерфейс системы построен таким образом, что основная задача продавца – составить предложение или каталог из нескольких товаров разных поставщиков – выполняется мгновенно: в пару кликов.</p>
                     </div>
                 </div>
             </div>
             <div class="basics__footer">
-                With an innovative approach to data management, we create a comprehensive workspace for both B2B and B2C sales, equipped with PIM, quoting, and price management tools, tailored specifically to the needs of distributors and dealers.
+                С инновационным подходом к управлению данными мы создаем универсальное рабочее пространство для B2B и B2C продаж, оснащенное инструментами для управления PIM, создания коммерческих предложений и управления ценами, специально адаптированными под потребности дистрибьюторов и дилеров.
             </div>
         </section>
         <section class="about">
