--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -670,41 +670,40 @@
             <div class="about__wrap container container--wide">
                 <div class="about__head">
                     <h2 class="about__heading title">
-                        Quotalogic is
+                        Quotcat – это:
                     </h2>
                 </div>
                 <div class="about__body">
                     <div class="about__section">
                         <h3 class="about__sub-heading">
-                            One-click access
+                            Центр достоверных данных
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>We speed up the startup phase and sales process by providing one-click access to suppliers' products and sales tools</p>
+                            <p>Для Поставщика, Дистрибьютора и Дилера наш сервис – это центральный ресурс с актуальными данными о товарах</p>
                         </div>
                     </div>
                     <div class="about__section">
                         <h3 class="about__sub-heading">
-                            Big data analysis
+                            Удобный обмен каталогами
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>By examining product behavior within the dealer network, distributors can fully understand the effectiveness of product propositions and respond quickly to market changes in real time.</p>
-                            <p>Timely proposition analysis reduces inventory costs by minimizing both stock-outs and overstocks.</p>
+                            <p>Создать и настроить новый каталог в нашей системе так же легко, как в любой другой CMS. А передать этот каталог партнёру – революционно просто: один клик, и он уже в работе</p>
                         </div>
                     </div>
                     <div class="about__section">
                         <h3 class="about__sub-heading">
-                            AI-driven sales
+                            Продажи без хлопот
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>Machine learning algorithms assist distributors in achieving optimal pricing and promotional strategies, creating product descriptions tailored to the context and purpose of the offer, and generating offers based on customer requests.</p>
+                            <p>Мы снимаем с продавца заботы о ведении контента, обновлении цен и управлении каталогами, позволяя ему сосредоточиться на продажах</p>
                         </div>
                     </div>
                     <div class="about__section">
                         <h3 class="about__sub-heading">
-                            Efficiency of seller
+                            Корпоративная эффективность
                         </h3>
                         <div class="about__description wysiwyg">
-                            <p>We assign tasks related to product info management, price tuning, and sales management according to the roles of each seller within the dealer network. This approach eliminates duplication of work and can reduce the workload of each seller by up to three times.</p>
+                            <p>Мы распределяем задачи по управлению информацией о продукте, настройке цен и управлению продажами в зависимости от ролей каждой компании в дилерской сети. Этот подход устраняет дублирование работы и сокращает нагрузку на каждого продавца.</p>
                         </div>
                     </div>
                 </div>
