--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -710,12 +710,12 @@
             </div>
         </section>
         <section class="tariffs container container--wide">
-            <h2 class="visuallyhidden">Tariffs</h2>
+            <h2 class="visuallyhidden">Тарифы:</h2>
             <table class="tariffs__table">
                 <thead class="tariffs__section tariffs__section--head">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell">
-                            <div class="tariffs__heading title" id="tariffs">Tariffs<span class="desktop-only">:</span></div>
+                            <div class="tariffs__heading title" id="tariffs">Тарифы<span class="desktop-only">:</span></div>
                         </th>
                         <th class="tariffs__cell">
                             <div class="plan">
@@ -723,13 +723,13 @@
                                     Seller
                                 </b>
                                 <div class="plan__price">
-                                    FREE
+                                    Бесплатный
                                 </div>
                                 <div class="plan__trial">
-                                    Try it now
+                                    Попробуйте
                                 </div>
                                 <div class="plan__note">
-                                    Limited number of products and catalogs.
+                                    Ограниченное количество каталогов и товаров
                                 </div>
                             </div>
                         </th>
@@ -739,13 +739,13 @@
                                     Dealer
                                 </b>
                                 <div class="plan__price">
-                                    € 24,9/mth <span class="plan__vat">excl. VAT, per user</span>
+                                    1 690 ₽ <span class="plan__vat">без НДС, за пользователя в месяц</span>
                                 </div>
                                 <div class="plan__trial">
-                                    14 days free
+                                    14 дней бесплатно
                                 </div>
                                 <div class="plan__note">
-                                    Unlimited products and up to 10 owned catalogs. Full analytics of your sales are included.
+                                    До 100 000 товаров и до 10 публикуемых каталогов.
                                 </div>
                             </div>
                         </th>
@@ -755,13 +755,13 @@
                                     Distributor
                                 </b>
                                 <div class="plan__price">
-                                    € 59,9/mth <span class="plan__vat">excl. VAT, per user</span>
+                                    € 59,9/mth <span class="plan__vat">без НДС, за пользователя в месяц</span>
                                 </div>
                                 <div class="plan__trial">
-                                    14 days free
+                                    14 дней бесплатно
                                 </div>
                                 <div class="plan__note">
-                                    Unlimited catalogs and advertising. Access to dealer network and market analytics.
+                                    Неограниченные каталоги и реклама. Доступ к дилерской сети и аналитике рынка.
                                 </div>
                             </div>
                         </th>
@@ -786,7 +786,7 @@
                 <tbody class="tariffs__section tariffs__section--body">
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
-                            Workspaces and companies
+                            Компаний
                         </th>
                         <td class="tariffs__cell">
                             1
@@ -800,10 +800,10 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Multiple users in one workspace
+                            Несколько пользователей в одной компании
                         </td>
                         <td class="tariffs__cell">
-                            up to 2
+                            до 2
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -814,24 +814,24 @@
                     </tr>
                     <tr class="tariffs__row">
                         <th class="tariffs__cell tariffs__cell--sub-heading">
-                            Catalogs
+                            Каталоги
                         </th>
                         <td class="tariffs__cell">
-                            up to 3
+                            до 3
                         </td>
                         <td class="tariffs__cell">
-                            up to 10
+                            до 10
                         </td>
                         <td class="tariffs__cell">
-                            unlimited
+                            без огра<wbr>ничений
                         </td>
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Public catalog pages
+                            Публичные страницы каталога
                         </td>
                         <td class="tariffs__cell">
-                            Basic
+                            Базовые
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -842,10 +842,10 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--sub-heading">
-                            Products
+                            Товары
                         </td>
                         <td class="tariffs__cell">
-                            up to 5000
+                            до 5000
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -856,7 +856,7 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Promo / Key Features
+                            Промо / Ключевые характеристики
                         </td>
                         <td class="tariffs__cell">
                             1 / 5
@@ -870,10 +870,10 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--sub-heading">
-                            Quotes
+                            Предложения
                         </td>
                         <td class="tariffs__cell">
-                            up to 20
+                            до 20
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -884,21 +884,7 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Quotation tools
-                        </td>
-                        <td class="tariffs__cell check">
-                            ✓
-                        </td>
-                        <td class="tariffs__cell check">
-                            ✓
-                        </td>
-                        <td class="tariffs__cell check">
-                            ✓
-                        </td>
-                    </tr>
-                    <tr class="tariffs__row">
-                        <td class="tariffs__cell tariffs__cell--heading">
-                            Data import
+                            Инструменты
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -912,7 +898,7 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Chat
+                            Импорт данных
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -926,10 +912,24 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Quote customization and templates
+                            Чат
+                        </td>
+                        <td class="tariffs__cell check">
+                            ✓
+                        </td>
+                        <td class="tariffs__cell check">
+                            ✓
+                        </td>
+                        <td class="tariffs__cell check">
+                            ✓
+                        </td>
+                    </tr>
+                    <tr class="tariffs__row">
+                        <td class="tariffs__cell tariffs__cell--heading">
+                            Индивидуализация и шаблоны
                         </td>
                         <td class="tariffs__cell">
-                            Trial
+                            Пробный
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -940,10 +940,10 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--heading">
-                            Data export
+                            Экспорт данных
                         </td>
                         <td class="tariffs__cell">
-                            Trial
+                            Пробный
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -957,10 +957,10 @@
                             PRM
                         </td>
                         <td class="tariffs__cell">
-                            Trial
+                            Пробный
                         </td>
                         <td class="tariffs__cell">
-                            Trial
+                            Пробный
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -968,10 +968,10 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--single-line-heading">
-                            Company sales analytics
+                            Аналитика продаж компании
                         </td>
                         <td class="tariffs__cell">
-                            Trial
+                            Пробный
                         </td>
                         <td class="tariffs__cell check">
                             ✓
@@ -982,7 +982,7 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--single-line-heading">
-                            Dealers analytics
+                            Аналитика дилеров
                         </td>
                         <td class="tariffs__cell">
 
@@ -997,7 +997,7 @@
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--single-line-heading">
                             <!-- заворачиваем в tariffs__strut если нужно больше места на десктопах -->
-                            <span class="tariffs__strut">Competitor analysis, price monitoring</span>
+                            <span class="tariffs__strut">Анализ конкурентов, мониторинг цен</span>
                         </td>
                         <td class="tariffs__cell">
 
@@ -1011,7 +1011,7 @@
                     </tr>
                     <tr class="tariffs__row">
                         <td class="tariffs__cell tariffs__cell--single-line-heading">
-                            Advertising
+                            Реклама
                         </td>
                         <td class="tariffs__cell">
 
