--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -1029,15 +1029,12 @@
         <section class="now">
             <div class="now__wrap container">
                 <h2 class="now__heading">
-                    Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
+                    Присоединяйтесь!
                 </h2>
                 <div class="now__action shadow">
                     <a class="button button--alternate mfp-handler" href="#demo">
-                        Book a demo
+                        Запросить демо
                     </a>
-                </div>
-                <div class="now__note">
-                    start for free
                 </div>
             </div>
         </section>
